--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
     "@types/geojson": "^7946.0.10",
     "bcrypt": "^5.1.1",
