example env file

--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
+PORT=4003
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5438
 DB_USERNAME=chirchir
 DB_PASSWORD=chirchir
 DB_DATABASE=safeboda
